# TaskManager

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
locale/ru/LG_MESSAGES/: django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: labels.json  read_json.py  statuses.json  tasks.json  user.json  user_data.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py  0003_alter_label_options.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_labels.py  0002_rename_tasklabelrelation_tasklabel.py  (+2 more)
task_manager/templates/: base.html  index.html  nav.html
task_manager/users/: forms.py  models.py  tests.py  tests_users.py  urls.py  views.py
templates/: base.html  delete.html  form.html  index.html  login.html  nav.html  next_nav.html
templates/labels/: delete.html  labels_list.html
templates/registration/: login.html
templates/statuses/: delete.html  statuses_list.html
templates/task_manager/: base.html  index.html
templates/tasks/: delete.html  task_show.html  tasks_list.html
templates/users/: delete.html  update.html  users_list.html
(+25 files in other folders)
