[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "hexlet project task manager"
authors = ["pavelkoA <pavelko88@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
